Changed os.js menu bar z-index to avoid it showing up on top of widget editor dialog box.

--- a/bos/src/client/packages/panels/src/_panel.scss
+++ b/bos/src/client/packages/panels/src/_panel.scss
@@ -39,7 +39,10 @@
   line-height: normal;
 
   &[data-ontop=true] {
-    z-index: 16777271;
+    /* Begin Oxzion customization. */
+    /* z-index: 16777271; */
+    z-index: 10009;
+    /* End Oxzion customization. */
   }
 
   &[data-position=top] {
